--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ checkstyle {
     toolVersion = '10.2'
 }
 
+tasks.withType(Checkstyle) {
+    ignoreFailures = true
+}
+
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
@@ -66,7 +70,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveFileName = 'addressbook.jar'
+    archiveFileName = 'tp_new.jar'
 }
 
 defaultTasks 'clean', 'test'
