--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,39 +13,31 @@ jobs:
       - name: Set up repository
         uses: actions/checkout@main
 
-      - name: Set up repository
-        uses: actions/checkout@main
-        with:
-          ref: master
-
-      - name: Merge to master
-        run: git checkout --progress --force ${{ github.sha }}
-
-      - name: Run repository-wide tests
-        if: runner.os == 'Linux'
-        working-directory:  ${{ github.workspace }}/.github
-        run: ./run-checks.sh
-
-      - name: Validate Gradle Wrapper
-        uses: gradle/wrapper-validation-action@v1
-
-      - name: Install Xvfb
-        if: runner.os == 'Linux'
-        run: sudo apt-get update && sudo apt-get install -y xvfb
-
-      - name: Start Xvfb
-        if: runner.os == 'Linux'
-        run: Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-
-      - name: Set DISPLAY variable
-        if: runner.os == 'Linux'
-        run: export DISPLAY=:99
-
-      - name: Setup JDK 11
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: '11'
           java-package: jdk+fx
+
+      - name: Install Xvfb (for Linux only)
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y xvfb
+
+      - name: Start Xvfb (for Linux only)
+        if: runner.os == 'Linux'
+        run: Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+
+      - name: Set DISPLAY environment variable (for Linux only)
+        if: runner.os == 'Linux'
+        run: export DISPLAY=:99
+
+      - name: Run repository-wide tests
+        if: runner.os == 'Linux'
+        working-directory: ${{ github.workspace }}/.github
+        run: ./run-checks.sh
+
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
 
       - name: Build and check with Gradle
         run: ./gradlew check coverage
