--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,8 @@ dependencies {
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: jUnitVersion
 
+    testImplementation 'org.mockito:mockito-core:5.11.0'
+
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: jUnitVersion
 }
 
