--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ src/main/resources/docs/
 /preferences.json
 /*.log.*
 hs_err_pid[0-9]*.log
+/addressbookdata/
 
 # Test sandbox files
 src/test/data/sandbox/
