Add flag to ignore ui in codecov

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,4 +44,4 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
-          paths-ignore: "main/java/seedu/address/ui/**/*"
+          flags: ignore=src/main/java/seedu/address/ui/**
