--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,5 +43,5 @@ jobs:
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-#        with:
-#          flags: ignore=src/main/java/seedu/address/ui/**
+        with:
+          flags: ignore=src/main/java/seedu/address/ui/**
