--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,4 +44,4 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
-          flags: ignore=**/ui/*
+          flags: ignore=src/main/java/seedu/address/ui/**
