--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveFileName = 'addressbook.jar'
+    archiveFileName = 'FitBook.jar'
 }
 
 defaultTasks 'clean', 'test'
