--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -55,7 +55,7 @@ jobs:
         #        uses: actions/create-release@v1
         uses: softprops/action-gh-release@v1
         with:
-          body_path: ./RELEASE.md
+          # body_path: ./RELEASE.md
           draft: true
           prerelease: false
           files: build/libs/clinicmate.jar
