--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,9 @@ dependencies {
 }
 
 shadowJar {
-    archiveFileName = 'addressbook.jar'
+    archiveBaseName = "HouseKeepingHub"
+    archiveVersion = "v1.2.0"
+    archiveClassifier = null
 }
 
 defaultTasks 'clean', 'test'
