--- a/.github/workflows/build-and-prerelease.yml
+++ b/.github/workflows/build-and-prerelease.yml
@@ -57,11 +57,10 @@ jobs:
         id: create_pre_release
         uses: softprops/action-gh-release@v1
         with:
-          #body_path: ./RELEASE.md
           draft: false
           prerelease: true
           files: build/libs/clinicmate.jar
-          name: Release ${{ github.ref }}
-          tag_name: ${{ github.ref }}
+          name: Development Pre-release
+          tag_name: dev
           fail_on_unmatched_files: true
           token: ${{ secrets.GITHUB_TOKEN }}
