--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveFileName = 'addressbook.jar'
+    archiveFileName = 'healthsync.jar'
 }
 
 defaultTasks 'clean', 'test'
