--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,10 @@ dependencies {
 }
 
 shadowJar {
-    archiveFileName = 'educonnect.jar'
+    archiveBaseName.set("educonnect")
+    archiveClassifier.set(null)
+    archiveVersion.set("1.2")
+    dependsOn("distZip", "distTar")
 }
 
 defaultTasks 'clean', 'test'
