--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,8 @@ dependencies {
 }
 
 shadowJar {
-    archiveFileName = 'addressbook.jar'
+    archiveBaseName = 'TrAcker'
+    archiveClassifier = 'v1.2'
 }
 
 defaultTasks 'clean', 'test'
